--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,27 +9,35 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "fastify": "4.24.3",
     "@fastify/cors": "8.4.0",
+    "@fastify/env": "4.2.0",
     "@fastify/helmet": "11.1.1",
-    "@fastify/rate-limit": "9.1.0",
     "@fastify/multipart": "8.0.0",
+    "@fastify/rate-limit": "9.1.0",
+    "@fastify/sensible": "5.2.0",
     "@fastify/swagger": "8.12.0",
     "@fastify/swagger-ui": "2.0.0",
-    "@fastify/env": "4.2.0",
-    "@fastify/sensible": "5.2.0",
+    "@fastify/type-provider-typebox": "^5.2.0",
+    "@sinclair/typebox": "^0.34.41",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/form-data": "^2.5.2",
+    "@types/node-fetch": "^2.6.13",
+    "axios": "^1.11.0",
     "dotenv": "16.3.1",
-    "uuid": "9.0.1",
+    "fastify": "4.24.3",
+    "fluent-ffmpeg": "2.1.2",
+    "form-data": "^4.0.4",
+    "node-fetch": "^3.3.2",
+    "node-wav": "0.0.2",
     "pino": "8.17.2",
     "pino-pretty": "10.3.1",
-    "ytdl-core": "4.11.5",
-    "fluent-ffmpeg": "2.1.2",
-    "node-wav": "0.0.2"
+    "uuid": "9.0.1",
+    "ytdl-core": "4.11.5"
   },
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/uuid": "9.0.7",
-    "typescript": "5.3.3",
-    "tsx": "4.6.2"
+    "tsx": "4.6.2",
+    "typescript": "5.3.3"
   }
 }
