--- a/services/chord-analyzer/requirements.txt
+++ b/services/chord-analyzer/requirements.txt
@@ -9,8 +9,8 @@ soundfile>=0.12.1
 numpy>=1.24.3
 scipy>=1.11.4
 
-# YouTube audio extraction
-yt-dlp>=2023.11.16
+# Audio processing
+ffmpeg-python>=0.2.0
 
 # Additional audio processing
 scikit-learn>=1.3.2
